crates/cribo/tests/snapshots/execution_results@ast_rewriting_class_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_class_name_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Model User: Model User(name='Alice', email='alice@example.com')\nEntity User: Entity User(name='Bob', age=25)\nModel Product: Model Product(name='Widget', price=19.99)\nEntity Product: Entity Product(sku='P001', name='Gadget')\nResult: {'model_user': \"Model User(name='Alice', email='alice@example.com')\", 'entity_user': \"Entity User(name='Bob', age=25)\", 'model_product': \"Model Product(name='Widget', price=19.99)\", 'entity_product': \"Entity Product(sku='P001', name='Gadget')\"}",
    stderr: "",
}
