crates/cribo/tests/snapshots/execution_results@ast_rewriting_comprehension_target_scope.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_comprehension_target_scope/main.py
---
ExecutionResults {
    status: Success,
    stdout: "result: 25",
    stderr: "",
}
