crates/cribo/tests/snapshots/execution_results@ast_rewriting_loop_else_globals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_loop_else_globals/main.py
---
ExecutionResults {
    status: Success,
    stdout: "loading loops\nfound: found:2\nnot found: missing:99\ncount up to 3: 3\ncount up to 10: -1",
    stderr: "",
}
