crates/cribo/tests/snapshots/execution_results@ast_rewriting_nested_namespace_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_nested_namespace_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello, Python!",
    stderr: "",
}
